# krusty

./: .gitignore  Cargo.toml  README.md
resource/: index.html  package.json  vite.config.ts
resource/src/: App.vue  main.ts  style.css
resource/src/components/: CounterComponent.vue  FooterComponent.vue  HeaderComponent.vue
src/: main.rs
src/services/: example.rs  mod.rs
src/utils/: types.rs
