[package]
name = "krusty"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.10.2"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full"] }
